--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Weather</title>
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/screen.css">
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="stylesheet" href="/screen.css" />
   </head>
   <body>
-    <h1 class='hello-world'></h1>
+    <input id="input" type="text" />
+    <button class="search-button">Search</button>
+    <br />
+    <span>Temp:</span><span id="temp"></span>
+
+    <span>Humidity:</span><span id="humid"></span>
+
+    <span>Hi:</span><span id="high-temp"></span>
+
+    <span>Low:</span><span id="low-temp"></span>
+
+    <h1 class="hello-world"></h1>
     <script src="/main.js" charset="utf-8"></script>
   </body>
 </html>
