--- a/public/index.html
+++ b/public/index.html
@@ -7,50 +7,36 @@
   <title>Weather</title>
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="stylesheet" href="/screen.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
 </head>
 
 <body>
   <div class="input">
     <input id="input" type="text" />
-    <button class="search-button">Search</button>
+    <button class="search-button is-primary is-loading">Search</button>
   </div>
   <br />
   <div class="content">
 
-    <div class="row">
-      <div class="col s12 m6">
-        <div class="card blue-grey darken-1">
-          <div class="card-content white-text center-align">
+    <div class="column is-centered">
+      <h2 class="description"> Temp: <span id="temp" class="data"></span>&deg;</h2>
+      <h2 class="description"> Feels like: <span id="feels" class="data"></span>&deg;</h2>
 
-            <span class="description"> Temp: <span id="temp" class="data"></span> </span>
+      <h2 class="description">Humidity:<span id="humid" class="data"></span>%</h2>
 
-            <span class="symbol">&deg;</span>
+      <h2 class="description">Hi:<span id="high-temp" class="data"></span>&deg;</span>
 
-            <span class="description">Humidity:</span><span id="humid" class="data"></span>
-            <span class="symbol">%</span>
+        <h2 class="description">Lo:<span id="low-temp" class="data"></span>&deg;</h2>
 
-            <span class="description">Hi:</span><span id="high-temp" class="data"></span>
-            <span class="symbol">&deg;</span>
+        <h2 class="description">Pressure:<span id="pressure" class="data"></span></h2>
+        <h2 class="description">Wind speed:<span id="wind" class="data"></span>mph</h2>
 
-            <span class="description">Lo:</span>
-            <span id="low-temp" class="data"></span>
-            <span class="symbol">&deg;</span>
-
-            <span class="description">Pressure:</span>
-            <span id="pressure" class="data"></span>
-          </div>
-
-          <div class="card-action">
-
-          </div>
-        </div>
-      </div>
     </div>
+  </div>
 
 
-    <script src="/main.js" charset="utf-8"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script src="/main.js" charset="utf-8"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
 </body>
 
 </html>
